--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
       <div class="container">
         <h1 class="catalog-title">КАТАЛОГ СОФТА</h1>
         <div class="catalog-programs">
-          <div class="catalog-program">
+          <div class="catalog-program skype">
             <div class="program-like">
               <svg class="program-like__img">
                 <use xlink:href="../src/img/sprite/sprite.svg#like"></use>
@@ -60,7 +60,7 @@
               <div class="program-logo">
                 <img src="../src/img/skype-logo.svg" alt="skype" />
               </div>
-              <h1 class="program-title skype">Skype</h1>
+              <h1 class="program-title">Skype</h1>
             </div>
 
             <div class="program-description">
@@ -82,12 +82,14 @@
               target="_blank"
               href="https://miragen1349.github.io/soft-skype/dist/index.html"
             >
-              <img src="../src/img/download-icon.svg" alt="download" />
+              <svg class="program-download__img">
+                <use xlink:href="../src/img/sprite/sprite.svg#download"></use>
+              </svg>
               Скачать
             </a>
           </div>
 
-          <div class="catalog-program">
+          <div class="catalog-program zoom">
             <div class="program-like">
               <svg class="program-like__img">
                 <use xlink:href="../src/img/sprite/sprite.svg#like"></use>
@@ -98,7 +100,7 @@
               <div class="program-logo">
                 <img src="../src/img/zoom-logo.svg" alt="skype" />
               </div>
-              <h1 class="program-title zoom">Zoom</h1>
+              <h1 class="program-title">Zoom</h1>
             </div>
 
             <div class="program-description">
@@ -119,12 +121,14 @@
               target="_blank"
               href="https://miragen1349.github.io/soft-skype/dist/index.html"
             >
-              <img src="../src/img/download-icon.svg" alt="download" />
+              <svg class="program-download__img">
+                <use xlink:href="../src/img/sprite/sprite.svg#download"></use>
+              </svg>
               Скачать
             </a>
           </div>
 
-          <div class="catalog-program">
+          <div class="catalog-program whatsapp">
             <div class="program-like">
               <svg class="program-like__img">
                 <use xlink:href="../src/img/sprite/sprite.svg#like"></use>
@@ -135,7 +139,7 @@
               <div class="program-logo">
                 <img src="../src/img/whatsapp-logo.svg" alt="skype" />
               </div>
-              <h1 class="program-title whatsapp">Whatsapp</h1>
+              <h1 class="program-title">Whatsapp</h1>
             </div>
 
             <div class="program-description">
@@ -157,7 +161,9 @@
               href="https://miragen1349.github.io/soft-skype/dist/index.html"
               target="_blank"
             >
-              <img src="../src/img/download-icon.svg" alt="download" />
+              <svg class="program-download__img">
+                <use xlink:href="../src/img/sprite/sprite.svg#download"></use>
+              </svg>
               Скачать
             </a>
           </div>
