--- a/src/index.html
+++ b/src/index.html
@@ -7,169 +7,172 @@
     <title>SoftЧто-то</title>
   </head>
   <body>
-    <header class="header">
-      <div class="container">
-        <div class="header-wrap">
-          <div class="burger-btn"><span></span></div>
-          <div class="program-logo" style="display: none;">
-            <img src="../src/img/skype.svg" alt="" />
-          </div>
-          <h1 class="header-title">
-            SoftЧто-то
-          </h1>
-          <nav class="header-nav">
-            <a href="#" class="header-link">Программы</a>
-            <a href="#" class="header-link">Категории</a>
-            <a href="#" class="header-link">Подборка</a>
-          </nav>
-          <input type="text" class="header-input" placeholder="Найти софт" />
-        </div>
-      </div>
-    </header>
-
-    <section class="main">
-      <div class="container">
-        <div class="main-description">
-          <h1 class="main-description__title">Аналоги и похожие программы</h1>
-          <div class="main-description__text">
-            <p>
-              SoftЧто-то - это каталог аналогов и похожих программ, благодаря
-              которому вы сможете найти подходящую альтернативу определенному
-              софту или сервису. Если вы пользуйтесь какой-либо программой, но
-              она вас не устраивает по некоторым критериям, то просто найдите ей
-              замену с таким же функционалом и параметрами. Аналог сможет решать
-              те же самые задачи и при этом будет лишен надоевших недостатков.
-            </p>
+    <div class="wrapper">
+      <header class="header">
+        <div class="container">
+          <div class="header-wrap">
+            <div class="burger-btn"><span></span></div>
+            <div class="program-logo" style="display: none;">
+              <img src="../src/img/skype.svg" alt="" />
+            </div>
+            <h1 class="header-title">
+              SoftЧто-то
+            </h1>
+            <nav class="header-nav">
+              <a href="#" class="header-link">Программы</a>
+              <a href="#" class="header-link">Категории</a>
+              <a href="#" class="header-link">Подборка</a>
+            </nav>
+            <input type="text" class="header-input" placeholder="Найти софт" />
           </div>
         </div>
-      </div>
-    </section>
+      </header>
 
-    <section class="catalog">
-      <div class="container">
-        <h1 class="catalog-title">КАТАЛОГ СОФТА</h1>
-        <div class="catalog-programs">
-          <div class="catalog-program skype">
-            <div class="program-like">
-              <svg class="program-like__img">
-                <use xlink:href="../src/img/sprite/sprite.svg#like"></use>
-              </svg>
-              <div class="program-like__text">120</div>
+      <section class="main">
+        <div class="container">
+          <div class="main-description">
+            <h1 class="main-description__title">Аналоги и похожие программы</h1>
+            <div class="main-description__text">
+              <p>
+                SoftЧто-то - это каталог аналогов и похожих программ, благодаря
+                которому вы сможете найти подходящую альтернативу определенному
+                софту или сервису. Если вы пользуйтесь какой-либо программой, но
+                она вас не устраивает по некоторым критериям, то просто найдите
+                ей замену с таким же функционалом и параметрами. Аналог сможет
+                решать те же самые задачи и при этом будет лишен надоевших
+                недостатков.
+              </p>
             </div>
-            <div class="program-header">
-              <div class="program-logo">
-                <img src="../src/img/skype-logo.svg" alt="skype" />
-              </div>
-              <h1 class="program-title">Skype</h1>
-            </div>
-
-            <div class="program-description">
-              бесплатное проприетарное программное обеспечение с закрытым кодом,
-              обеспечивающее текстовую, голосовую и видеосвязь через Интернет
-              между
-            </div>
-
-            <a
-              class="program-more"
-              target="_blank"
-              href="https://miragen1349.github.io/soft-skype/dist/index.html"
-            >
-              Подробнее
-            </a>
-
-            <a
-              class="program-download"
-              target="_blank"
-              href="https://miragen1349.github.io/soft-skype/dist/index.html"
-            >
-              <svg class="program-download__img">
-                <use xlink:href="../src/img/sprite/sprite.svg#download"></use>
-              </svg>
-              Скачать
-            </a>
-          </div>
-
-          <div class="catalog-program zoom">
-            <div class="program-like">
-              <svg class="program-like__img">
-                <use xlink:href="../src/img/sprite/sprite.svg#like"></use>
-              </svg>
-              <div class="program-like__text">120</div>
-            </div>
-            <div class="program-header">
-              <div class="program-logo">
-                <img src="../src/img/zoom-logo.svg" alt="skype" />
-              </div>
-              <h1 class="program-title">Zoom</h1>
-            </div>
-
-            <div class="program-description">
-              американская компания коммуникационных технологий со
-              штаб-квартирой в Сан-Хосе, Калифорния, которая предоставляет
-            </div>
-
-            <a
-              class="program-more"
-              target="_blank"
-              href="https://miragen1349.github.io/soft-skype/dist/index.html"
-            >
-              Подробнее
-            </a>
-
-            <a
-              class="program-download"
-              target="_blank"
-              href="https://miragen1349.github.io/soft-skype/dist/index.html"
-            >
-              <svg class="program-download__img">
-                <use xlink:href="../src/img/sprite/sprite.svg#download"></use>
-              </svg>
-              Скачать
-            </a>
-          </div>
-
-          <div class="catalog-program whatsapp">
-            <div class="program-like">
-              <svg class="program-like__img">
-                <use xlink:href="../src/img/sprite/sprite.svg#like"></use>
-              </svg>
-              <div class="program-like__text">120</div>
-            </div>
-            <div class="program-header">
-              <div class="program-logo">
-                <img src="../src/img/whatsapp-logo.svg" alt="skype" />
-              </div>
-              <h1 class="program-title">Whatsapp</h1>
-            </div>
-
-            <div class="program-description">
-              бесплатное проприетарное программное обеспечение с закрытым кодом,
-              обеспечивающее текстовую, голосовую и видеосвязь через Интернет
-              между
-            </div>
-
-            <a
-              class="program-more"
-              href="https://miragen1349.github.io/soft-skype/dist/index.html"
-              target="_blank"
-            >
-              Подробнее
-            </a>
-
-            <a
-              class="program-download"
-              href="https://miragen1349.github.io/soft-skype/dist/index.html"
-              target="_blank"
-            >
-              <svg class="program-download__img">
-                <use xlink:href="../src/img/sprite/sprite.svg#download"></use>
-              </svg>
-              Скачать
-            </a>
           </div>
         </div>
-      </div>
-    </section>
+      </section>
+
+      <section class="catalog">
+        <div class="container">
+          <h1 class="catalog-title">КАТАЛОГ СОФТА</h1>
+          <div class="catalog-programs">
+            <div class="catalog-program skype">
+              <div class="program-like">
+                <svg class="program-like__img">
+                  <use xlink:href="../src/img/sprite/sprite.svg#like"></use>
+                </svg>
+                <div class="program-like__text">120</div>
+              </div>
+              <div class="program-header">
+                <div class="program-logo">
+                  <img src="../src/img/skype-logo.svg" alt="skype" />
+                </div>
+                <h1 class="program-title">Skype</h1>
+              </div>
+
+              <div class="program-description">
+                бесплатное проприетарное программное обеспечение с закрытым
+                кодом, обеспечивающее текстовую, голосовую и видеосвязь через
+                Интернет между
+              </div>
+
+              <a
+                class="program-more"
+                target="_blank"
+                href="https://miragen1349.github.io/soft-skype/dist/index.html"
+              >
+                Подробнее
+              </a>
+
+              <a
+                class="program-download"
+                target="_blank"
+                href="https://miragen1349.github.io/soft-skype/dist/index.html"
+              >
+                <svg class="program-download__img">
+                  <use xlink:href="../src/img/sprite/sprite.svg#download"></use>
+                </svg>
+                Скачать
+              </a>
+            </div>
+
+            <div class="catalog-program zoom">
+              <div class="program-like">
+                <svg class="program-like__img">
+                  <use xlink:href="../src/img/sprite/sprite.svg#like"></use>
+                </svg>
+                <div class="program-like__text">120</div>
+              </div>
+              <div class="program-header">
+                <div class="program-logo">
+                  <img src="../src/img/zoom-logo.svg" alt="skype" />
+                </div>
+                <h1 class="program-title">Zoom</h1>
+              </div>
+
+              <div class="program-description">
+                американская компания коммуникационных технологий со
+                штаб-квартирой в Сан-Хосе, Калифорния, которая предоставляет
+              </div>
+
+              <a
+                class="program-more"
+                target="_blank"
+                href="https://miragen1349.github.io/soft-skype/dist/index.html"
+              >
+                Подробнее
+              </a>
+
+              <a
+                class="program-download"
+                target="_blank"
+                href="https://miragen1349.github.io/soft-skype/dist/index.html"
+              >
+                <svg class="program-download__img">
+                  <use xlink:href="../src/img/sprite/sprite.svg#download"></use>
+                </svg>
+                Скачать
+              </a>
+            </div>
+
+            <div class="catalog-program whatsapp">
+              <div class="program-like">
+                <svg class="program-like__img">
+                  <use xlink:href="../src/img/sprite/sprite.svg#like"></use>
+                </svg>
+                <div class="program-like__text">120</div>
+              </div>
+              <div class="program-header">
+                <div class="program-logo">
+                  <img src="../src/img/whatsapp-logo.svg" alt="skype" />
+                </div>
+                <h1 class="program-title">Whatsapp</h1>
+              </div>
+
+              <div class="program-description">
+                бесплатное проприетарное программное обеспечение с закрытым
+                кодом, обеспечивающее текстовую, голосовую и видеосвязь через
+                Интернет между
+              </div>
+
+              <a
+                class="program-more"
+                href="https://miragen1349.github.io/soft-skype/dist/index.html"
+                target="_blank"
+              >
+                Подробнее
+              </a>
+
+              <a
+                class="program-download"
+                href="https://miragen1349.github.io/soft-skype/dist/index.html"
+                target="_blank"
+              >
+                <svg class="program-download__img">
+                  <use xlink:href="../src/img/sprite/sprite.svg#download"></use>
+                </svg>
+                Скачать
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
 
     <footer class="footer">
       <div class="container">
