--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
           <div class="header-wrap">
             <div class="burger-btn"><span></span></div>
             <div class="program-logo" style="display: none;">
-              <img src="../src/img/skype.svg" alt="" />
+              <img src="../src/img/logo.svg" alt="" />
             </div>
             <h1 class="header-title">
               SoftЧто-то
