--- a/src/index.html
+++ b/src/index.html
@@ -52,12 +52,12 @@
           <h1 class="catalog-title">КАТАЛОГ СОФТА</h1>
           <div class="catalog-programs">
             <div class="catalog-program skype">
-              <div class="program-like">
+              <button class="program-like">
                 <svg class="program-like__img">
                   <use xlink:href="../src/img/sprite/sprite.svg#like"></use>
                 </svg>
                 <div class="program-like__text"></div>
-              </div>
+              </button>
               <div class="program-header">
                 <div class="program-logo">
                   <img src="../src/img/skype-logo.svg" alt="skype" />
@@ -92,12 +92,12 @@
             </div>
 
             <div class="catalog-program zoom">
-              <div class="program-like">
+              <button class="program-like">
                 <svg class="program-like__img">
                   <use xlink:href="../src/img/sprite/sprite.svg#like"></use>
                 </svg>
                 <div class="program-like__text"></div>
-              </div>
+              </button>
               <div class="program-header">
                 <div class="program-logo">
                   <img src="../src/img/zoom-logo.svg" alt="skype" />
@@ -131,12 +131,12 @@
             </div>
 
             <div class="catalog-program whatsapp">
-              <div class="program-like">
+              <button class="program-like">
                 <svg class="program-like__img">
                   <use xlink:href="../src/img/sprite/sprite.svg#like"></use>
                 </svg>
                 <div class="program-like__text"></div>
-              </div>
+              </button>
               <div class="program-header">
                 <div class="program-logo">
                   <img src="../src/img/whatsapp-logo.svg" alt="skype" />
