--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,33 @@
                 решать те же самые задачи и при этом будет лишен надоевших
                 недостатков.
               </p>
+
+              <div class="advantages">
+                <div class="advantages-block">
+                  <div class="advantages-block__img">
+                    <img src="../src/img/virus.svg" alt="" />
+                  </div>
+                  <div class="advantages-block__desc">
+                    Только проверенный софт
+                  </div>
+                </div>
+                <div class="advantages-block">
+                  <div class="advantages-block__img">
+                    <img src="../src/img/settings.svg" alt="" />
+                  </div>
+                  <div class="advantages-block__desc">
+                    Только рабочие программы
+                  </div>
+                </div>
+                <div class="advantages-block">
+                  <div class="advantages-block__img">
+                    <img src="../src/img/download-adv.svg" alt="" />
+                  </div>
+                  <div class="advantages-block__desc">
+                    Быстрая и удобная загрузка
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
