--- a/src/index.html
+++ b/src/index.html
@@ -85,12 +85,16 @@
                 </svg>
                 <div class="program-like__text"></div>
               </button>
-              <div class="program-header">
+
+              <a
+                href="https://miragen1349.github.io/soft-skype/dist/index.html"
+                class="program-header"
+              >
                 <div class="program-logo">
                   <img src="../src/img/skype-logo.svg" alt="skype" />
                 </div>
                 <h1 class="program-title">Skype</h1>
-              </div>
+              </a>
 
               <div class="program-description">
                 бесплатное проприетарное программное обеспечение с закрытым
@@ -123,12 +127,15 @@
                 </svg>
                 <div class="program-like__text"></div>
               </button>
-              <div class="program-header">
+              <a
+                href="https://miragen1349.github.io/soft-skype/dist/index.html"
+                class="program-header"
+              >
                 <div class="program-logo">
                   <img src="../src/img/zoom-logo.svg" alt="skype" />
                 </div>
                 <h1 class="program-title">Zoom</h1>
-              </div>
+              </a>
 
               <div class="program-description">
                 американская компания коммуникационных технологий со
@@ -162,12 +169,15 @@
                 </svg>
                 <div class="program-like__text"></div>
               </button>
-              <div class="program-header">
+              <a
+                href="https://miragen1349.github.io/soft-skype/dist/index.html"
+                class="program-header"
+              >
                 <div class="program-logo">
                   <img src="../src/img/whatsapp-logo.svg" alt="skype" />
                 </div>
                 <h1 class="program-title">Whatsapp</h1>
-              </div>
+              </a>
 
               <div class="program-description">
                 бесплатное проприетарное программное обеспечение с закрытым
@@ -229,22 +239,5 @@
     <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
     <script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-analytics.js"></script>
-
-    <script>
-      // Your web app's Firebase configuration
-      var firebaseConfig = {
-        apiKey: 'AIzaSyDm8vpaBgXR5XAYGjZHMI3eC1UgOoNdk48',
-        authDomain: 'soft-zilla.firebaseapp.com',
-        databaseURL: 'https://soft-zilla.firebaseio.com',
-        projectId: 'soft-zilla',
-        storageBucket: 'soft-zilla.appspot.com',
-        messagingSenderId: '854464451608',
-        appId: '1:854464451608:web:82b57403014bc0dbf95f6d',
-        measurementId: 'G-MBVB57WMF3',
-      }
-      // Initialize Firebase
-      firebase.initializeApp(firebaseConfig)
-      firebase.analytics()
-    </script>
   </body>
 </html>
