--- a/src/index.html
+++ b/src/index.html
@@ -12,12 +12,14 @@
         <div class="container">
           <div class="header-wrap">
             <div class="burger-btn"><span></span></div>
-            <div class="program-logo" style="display: none;">
-              <img src="../src/img/logo.svg" alt="" />
+            <div class="header-info">
+              <svg class="header-logo">
+                <use xlink:href="../src/img/sprite/sprite.svg#logo"></use>
+              </svg>
+              <h1 class="header-title">
+                SoftЧто-то
+              </h1>
             </div>
-            <h1 class="header-title">
-              SoftЧто-то
-            </h1>
             <nav class="header-nav">
               <a href="#" class="header-link">Программы</a>
               <a href="#" class="header-link">Категории</a>
