--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,11 @@
           <div class="header-wrap">
             <div class="burger-btn"><span></span></div>
             <div class="header-info">
-              <svg class="header-logo">
-                <use xlink:href="../src/img/sprite/sprite.svg#logo"></use>
-              </svg>
+              <a href="https://miragen1349.github.io/soft-home/dist/">
+                <svg class="header-logo">
+                  <use xlink:href="../src/img/sprite/sprite.svg#logo"></use>
+                </svg>
+              </a>
               <h1 class="header-title">
                 SoftЧто-то
               </h1>
