--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,58 @@
               <a href="#" class="header-link">Категории</a>
               <a href="#" class="header-link">Подборка</a>
             </nav>
-            <input type="text" class="header-input" placeholder="Найти софт" />
+
+            <div class="header-input__wrap">
+              <input
+                type="text"
+                class="header-input"
+                placeholder="Найти софт"
+              />
+
+              <div class="search">
+                <ul class="search-items" style="display: none;">
+                  <li class="search-item active">
+                    <a
+                      href="https://miragen1349.github.io/soft-skype/dist/index.html"
+                    >
+                      <img
+                        class="search-icon"
+                        src="../src/img/skype-logo.svg"
+                        alt="skype"
+                      />
+                      <span>Skype</span>
+                    </a>
+                  </li>
+                  <li class="search-item active">
+                    <a
+                      href="https://miragen1349.github.io/soft-skype/dist/index.html"
+                    >
+                      <img
+                        class="search-icon"
+                        src="../src/img/zoom-logo.svg"
+                        alt="Zoom"
+                      />
+                      <span>Zoom</span>
+                    </a>
+                  </li>
+                  <li class="search-item active">
+                    <a
+                      href="https://miragen1349.github.io/soft-skype/dist/index.html"
+                    >
+                      <img
+                        class="search-icon"
+                        src="../src/img/whatsapp-logo.svg"
+                        alt="Whatsapp"
+                      />
+                      <span>Whatsapp</span>
+                    </a>
+                  </li>
+                  <li class="search-none hide">
+                    Ничего не найдено
+                  </li>
+                </ul>
+              </div>
+            </div>
           </div>
         </div>
       </header>
