fix input mobile

--- a/src/index.html
+++ b/src/index.html
@@ -73,7 +73,7 @@
                       <span>Whatsapp</span>
                     </a>
                   </li>
-                  <li class="search-none hide">
+                  <li class="search-none hidden">
                     Ничего не найдено
                   </li>
                 </ul>
