add navbar logic

--- a/src/index.html
+++ b/src/index.html
@@ -23,9 +23,104 @@
               </h1>
             </div>
             <nav class="header-nav">
-              <a href="#" class="header-link">Программы</a>
-              <a href="#" class="header-link">Категории</a>
-              <a href="#" class="header-link">Подборка</a>
+              <a href="#link__program" class="header-link">Программы</a>
+              <div id="link__program" class="header-link__program hidden">
+                <ul>
+                  <li class="search-item active">
+                    <a
+                      href="https://miragen1349.github.io/soft-skype/dist/index.html"
+                    >
+                      <img
+                        class="search-icon"
+                        src="../src/img/skype-logo.svg"
+                        alt="skype"
+                      />
+                      <span>Skype</span>
+                    </a>
+                  </li>
+                  <li class="search-item active">
+                    <a
+                      href="https://miragen1349.github.io/soft-skype/dist/index.html"
+                    >
+                      <img
+                        class="search-icon"
+                        src="../src/img/zoom-logo.svg"
+                        alt="Zoom"
+                      />
+                      <span>Zoom</span>
+                    </a>
+                  </li>
+                  <li class="search-item active">
+                    <a
+                      href="https://miragen1349.github.io/soft-skype/dist/index.html"
+                    >
+                      <img
+                        class="search-icon"
+                        src="../src/img/whatsapp-logo.svg"
+                        alt="Whatsapp"
+                      />
+                      <span>Whatsapp</span>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+
+              <a href="#link__tags" class="header-link">Категории</a>
+              <div id="link__tags" class="header-link__tags hidden">
+                <ul>
+                  <li class="search-item active">
+                    Связь
+                  </li>
+                  <li class="search-item active">
+                    Мессенджер
+                  </li>
+                  <li class="search-item active">
+                    Сообщения
+                  </li>
+                </ul>
+              </div>
+
+              <a href="#link__selection" class="header-link">Подборка</a>
+              <div id="link__selection" class="header-link__selection hidden">
+                <ul>
+                  <li class="search-item active">
+                    <a
+                      href="https://miragen1349.github.io/soft-skype/dist/index.html"
+                    >
+                      <img
+                        class="search-icon"
+                        src="../src/img/skype-logo.svg"
+                        alt="skype"
+                      />
+                      <span>Skype</span>
+                    </a>
+                  </li>
+                  <li class="search-item active">
+                    <a
+                      href="https://miragen1349.github.io/soft-skype/dist/index.html"
+                    >
+                      <img
+                        class="search-icon"
+                        src="../src/img/zoom-logo.svg"
+                        alt="Zoom"
+                      />
+                      <span>Zoom</span>
+                    </a>
+                  </li>
+                  <li class="search-item active">
+                    <a
+                      href="https://miragen1349.github.io/soft-skype/dist/index.html"
+                    >
+                      <img
+                        class="search-icon"
+                        src="../src/img/whatsapp-logo.svg"
+                        alt="Whatsapp"
+                      />
+                      <span>Whatsapp</span>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </nav>
 
             <div class="header-input__wrap">
