fix button color

--- a/src/index.html
+++ b/src/index.html
@@ -363,15 +363,13 @@
         <div class="footer-wrap">
           <div class="footer-text">Copyright © 2018-2020 MultiSetup</div>
           <div class="footer-text">
-            Права на продукты, услуги, скачиваемое программное обеспечение
-            принадлежит Microsoft Corporation
-          </div>
-          <div class="footer-text adaptive">
-            Официальная страница приложения Skype - www.skype.com
+            Права на продукты и программное обеспечение сторонних издателей,
+            представленных на сайте, принадлежат их правообладателям
           </div>
           <div class="footer-text">
-            С условиями использования продуктов, услуг, программного обеспечения
-            можно ознакомиться на сайте: www.skype.com/ru/legal
+            С условиями использования программного обеспечения MultiSetup, а так
+            же с политикой конфиденциальности и защиты данных можно ознакомиться
+            на сайтах: www.msetup.pro/license и www.msetup.pro/privacy-policy
           </div>
           <div class="footer-mail">
             <span>Контакты:</span>
