--- a/src/index.html
+++ b/src/index.html
@@ -12,16 +12,17 @@
         <div class="container">
           <div class="header-wrap">
             <div class="burger-btn"><span></span></div>
-            <div class="header-info">
-              <a href="https://miragen1349.github.io/soft-home/dist/">
-                <svg class="header-logo">
-                  <use xlink:href="../src/img/sprite/sprite.svg#logo"></use>
-                </svg>
-              </a>
+            <a
+              href="https://miragen1349.github.io/soft-home/dist/"
+              class="header-info"
+            >
+              <svg class="header-logo">
+                <use xlink:href="../src/img/sprite/sprite.svg#logo"></use>
+              </svg>
               <h1 class="header-title">
                 SoftЧто-то
               </h1>
-            </div>
+            </a>
             <nav class="header-nav">
               <a href="#link__program" class="header-link">Программы</a>
               <div id="link__program" class="header-link__program hidden">
