--- a/src/index.html
+++ b/src/index.html
@@ -40,9 +40,7 @@
                     </a>
                   </li>
                   <li class="search-item active">
-                    <a
-                      href="https://miragen1349.github.io/soft-skype/dist/index.html"
-                    >
+                    <a href="https://miragen1349.github.io/soft-zoom/dist/">
                       <img
                         class="search-icon"
                         src="../src/img/zoom-logo.svg"
@@ -97,9 +95,7 @@
                     </a>
                   </li>
                   <li class="search-item active">
-                    <a
-                      href="https://miragen1349.github.io/soft-skype/dist/index.html"
-                    >
+                    <a href="https://miragen1349.github.io/soft-zoom/dist/">
                       <img
                         class="search-icon"
                         src="../src/img/zoom-logo.svg"
@@ -146,9 +142,7 @@
                     </a>
                   </li>
                   <li class="search-item active">
-                    <a
-                      href="https://miragen1349.github.io/soft-skype/dist/index.html"
-                    >
+                    <a href="https://miragen1349.github.io/soft-zoom/dist/">
                       <img
                         class="search-icon"
                         src="../src/img/zoom-logo.svg"
@@ -278,7 +272,7 @@
                 <div class="program-like__text"></div>
               </button>
               <a
-                href="https://miragen1349.github.io/soft-skype/dist/index.html"
+                href="https://miragen1349.github.io/soft-zoom/dist/"
                 class="program-header"
               >
                 <div class="program-logo">
@@ -294,16 +288,14 @@
 
               <a
                 class="program-more"
-                target="_blank"
-                href="https://miragen1349.github.io/soft-skype/dist/index.html"
+                href="https://miragen1349.github.io/soft-zoom/dist/"
               >
                 Подробнее
               </a>
 
               <a
                 class="program-download"
-                target="_blank"
-                href="https://miragen1349.github.io/soft-skype/dist/index.html"
+                href="https://miragen1349.github.io/soft-zoom/dist/"
               >
                 <svg class="program-download__img">
                   <use xlink:href="../src/img/sprite/sprite.svg#download"></use>
