--- a/src/index.html
+++ b/src/index.html
@@ -199,7 +199,11 @@
                 </div>
                 <div class="advantages-block">
                   <div class="advantages-block__img">
-                    <img src="../src/img/settings.svg" alt="" />
+                    <object
+                      id="gears"
+                      data="../src/img/settings.svg"
+                      type="image/svg+xml"
+                    ></object>
                   </div>
                   <div class="advantages-block__desc">
                     Только рабочие программы
