--- a/src/index.html
+++ b/src/index.html
@@ -211,7 +211,11 @@
                 </div>
                 <div class="advantages-block">
                   <div class="advantages-block__img">
-                    <img src="../src/img/download-adv.svg" alt="" />
+                    <object
+                      id="download-adv"
+                      data="../src/img/download-adv.svg"
+                      type="image/svg+xml"
+                    ></object>
                   </div>
                   <div class="advantages-block__desc">
                     Быстрая и удобная загрузка
