add rotate virus

--- a/src/index.html
+++ b/src/index.html
@@ -191,7 +191,11 @@
               <div class="advantages">
                 <div class="advantages-block">
                   <div class="advantages-block__img">
-                    <img src="../src/img/virus.svg" alt="" />
+                    <object
+                      id="virus"
+                      data="../src/img/virus.svg"
+                      type="image/svg+xml"
+                    ></object>
                   </div>
                   <div class="advantages-block__desc">
                     Только проверенный софт
